// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GraphQL operations > COMPARE_REPOS sends an unchanged document 1`] = `
"query CompareRepos($owner1: String!, $name1: String!, $owner2: String!, $name2: String!) {
  repoA: repository(owner: $owner1, name: $name1) {
    ...RepoDetails
  }
  repoB: repository(owner: $owner2, name: $name2) {
    ...RepoDetails
  }
  rateLimit {
    cost
    remaining
    resetAt
  }
}

fragment RepoCard on Repository {
  id
  nameWithOwner
  name
  owner {
    login
  }
  description
  url
  stargazerCount
  forkCount
  pushedAt
  isArchived
  primaryLanguage {
    name
    color
  }
  licenseInfo {
    spdxId
    name
  }
  repositoryTopics(first: 6) {
    nodes {
      topic {
        name
      }
    }
  }
  goodFirstIssues: issues(labels: ["good first issue"], states: OPEN) {
    totalCount
  }
}

fragment RepoDetails on Repository {
  ...RepoCard
  homepageUrl
  diskUsage
  openIssues: issues(states: OPEN) {
    totalCount
  }
  openPullRequests: pullRequests(states: OPEN) {
    totalCount
  }
  watchers {
    totalCount
  }
  languages(first: 10, orderBy: {field: SIZE, direction: DESC}) {
    totalSize
    edges {
      size
      node {
        name
        color
      }
    }
  }
  readme: object(expression: "HEAD:README.md") {
    ... on Blob {
      text
    }
  }
  defaultBranchRef {
    name
    target {
      ... on Commit {
        history(first: 10) {
          nodes {
            oid
            messageHeadline
            committedDate
            url
            author {
              name
            }
          }
        }
      }
    }
  }
  issues(first: 10, states: OPEN, orderBy: {field: CREATED_AT, direction: DESC}) {
    nodes {
      id
      number
      title
      url
      createdAt
    }
  }
}"
`;

exports[`GraphQL operations > REPO_DETAIL sends an unchanged document 1`] = `
"fragment RepoCard on Repository {
  id
  nameWithOwner
  name
  owner {
    login
  }
  description
  url
  stargazerCount
  forkCount
  pushedAt
  isArchived
  primaryLanguage {
    name
    color
  }
  licenseInfo {
    spdxId
    name
  }
  repositoryTopics(first: 6) {
    nodes {
      topic {
        name
      }
    }
  }
  goodFirstIssues: issues(labels: ["good first issue"], states: OPEN) {
    totalCount
  }
}

query RepoDetail($owner: String!, $name: String!) {
  repository(owner: $owner, name: $name) {
    ...RepoDetails
  }
  rateLimit {
    cost
    remaining
    resetAt
  }
}

fragment RepoDetails on Repository {
  ...RepoCard
  homepageUrl
  diskUsage
  openIssues: issues(states: OPEN) {
    totalCount
  }
  openPullRequests: pullRequests(states: OPEN) {
    totalCount
  }
  watchers {
    totalCount
  }
  languages(first: 10, orderBy: {field: SIZE, direction: DESC}) {
    totalSize
    edges {
      size
      node {
        name
        color
      }
    }
  }
  readme: object(expression: "HEAD:README.md") {
    ... on Blob {
      text
    }
  }
  defaultBranchRef {
    name
    target {
      ... on Commit {
        history(first: 10) {
          nodes {
            oid
            messageHeadline
            committedDate
            url
            author {
              name
            }
          }
        }
      }
    }
  }
  issues(first: 10, states: OPEN, orderBy: {field: CREATED_AT, direction: DESC}) {
    nodes {
      id
      number
      title
      url
      createdAt
    }
  }
}"
`;

exports[`GraphQL operations > SAVED_REPOS sends an unchanged document 1`] = `
"fragment RepoCard on Repository {
  id
  nameWithOwner
  name
  owner {
    login
  }
  description
  url
  stargazerCount
  forkCount
  pushedAt
  isArchived
  primaryLanguage {
    name
    color
  }
  licenseInfo {
    spdxId
    name
  }
  repositoryTopics(first: 6) {
    nodes {
      topic {
        name
      }
    }
  }
  goodFirstIssues: issues(labels: ["good first issue"], states: OPEN) {
    totalCount
  }
}

query SavedRepos($ids: [ID!]!) {
  nodes(ids: $ids) {
    ... on Repository {
      ...RepoCard
    }
  }
  rateLimit {
    cost
    remaining
    resetAt
  }
}"
`;

exports[`GraphQL operations > SEARCH_REPOS sends an unchanged document 1`] = `
"fragment RepoCard on Repository {
  id
  nameWithOwner
  name
  owner {
    login
  }
  description
  url
  stargazerCount
  forkCount
  pushedAt
  isArchived
  primaryLanguage {
    name
    color
  }
  licenseInfo {
    spdxId
    name
  }
  repositoryTopics(first: 6) {
    nodes {
      topic {
        name
      }
    }
  }
  goodFirstIssues: issues(labels: ["good first issue"], states: OPEN) {
    totalCount
  }
}

query SearchRepos($query: String!, $first: Int!, $after: String) {
  search(query: $query, type: REPOSITORY, first: $first, after: $after) {
    repositoryCount
    pageInfo {
      endCursor
      hasNextPage
    }
    edges {
      node {
        ...RepoCard
      }
    }
  }
  rateLimit {
    cost
    remaining
    resetAt
  }
}"
`;
